# mcp-eu-ai-act

./: .coverage  .gitignore  CI_CD_PIPELINE_GUIDE.md  Dockerfile  INSTALLATION_TESTED.md  LIVRAISON.md  LIVRAISON_TASK_20260874.md  RAPPORT_CEO_TASK_20261223.md  README.md  VALIDATION_CI_CD_TASK_20261223.md  VALIDATION_FINALE.md  example_usage.py  gdpr_module.py  index.js  manifest.json  package-lock.json  package.json  paywall_api.py  pyproject.toml  requirements.txt  server.py  smithery.yaml
.github/workflows/: qa-mcp-eu-ai-act.yml
.smithery/shttp/: manifest.json  module.js  module.js.map
.smithery/stdio/: index.cjs  index.cjs.map  manifest.json  mcpb-manifest.json  server.mcpb
examples/: README.md  full_report.py  quick_scan.py
src/: index.ts
tests/: COVERAGE_REPORT.md  IMPLEMENTATION_REPORT.md  README.md  __init__.py  conftest.py  run_tests.sh  test_data_accuracy.py  test_gdpr_module.py  test_integration.py  test_mcp_core.py  test_paywall.py  test_server.py
