[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-eu-ai-act"
version = "1.1.0"
description = "MCP Server to verify EU AI Act compliance for AI projects"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.14.1",
]
keywords = [
    "EU AI Act",
    "compliance",
    "MCP",
    "AI regulation",
    "risk assessment",
]

[project.urls]
Homepage = "https://github.com/ark-forge/mcp-eu-ai-act"
Repository = "https://github.com/ark-forge/mcp-eu-ai-act"
Documentation = "https://arkforge.fr/mcp-eu-ai-act.html"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["server.py"]
omit = [
    ".venv/*",
    "venv/*",
    "node_modules/*",
    "example_usage.py",
    "test_json_format.py",
    "test_server.py",
    "dist/*",
    "__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]
show_missing = true
skip_empty = true
